@@ -1,4 +1,9 @@
 User johns
+Date:
+
+    Detect dvb LPCM stream and ignore it.
+
+User johns
 Date: Thu Feb  2 23:29:35 CET 2012
 
     Release Version 0.4.6
